# text_editor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/nativefiledialog/src/: nfd_cocoa.m
src/: FileOperations.cpp  FileOperations.h  GapBuffer.cpp  GapBuffer.h  InputHandler.cpp  InputHandler.h  Scrollbar.cpp  Scrollbar.h  SearchDialog.cpp  SearchDialog.h  StatusBar.cpp  StatusBar.h  TextRenderer.cpp  TextRenderer.h  UI.cpp  UI.h
